MGMT-3491 swagger changes for additional OLM based services
