# models/cluster_operator.go
@@ -1,0 +1,81 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ClusterOperator cluster operator
+//
+// swagger:model cluster-operator
+type ClusterOperator struct {
+
+	// enabled
+	Enabled *bool `json:"enabled,omitempty"`
+
+	// operator type
+	OperatorType OperatorType `json:"operator_type,omitempty"`
+
+	// JSON-formatted string containing the properties for each operator
+	Properties string `json:"properties,omitempty"`
+
+	// status
+	Status string `json:"status,omitempty"`
+
+	// status info
+	StatusInfo string `json:"status_info,omitempty"`
+}
+
+// Validate validates this cluster operator
+func (m *ClusterOperator) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateOperatorType(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ClusterOperator) validateOperatorType(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.OperatorType) { // not required
+		return nil
+	}
+
+	if err := m.OperatorType.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("operator_type")
+		}
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ClusterOperator) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ClusterOperator) UnmarshalBinary(b []byte) error {
+	var res ClusterOperator
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
