# models/operators.go
@@ -1,71 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// Operators operators
-//
-// swagger:model operators
-type Operators struct {
-
-	// lso
-	Lso *Lso `json:"lso,omitempty" gorm:"embedded;embedded_prefix:lso_"`
-}
-
-// Validate validates this operators
-func (m *Operators) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateLso(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *Operators) validateLso(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.Lso) { // not required
-		return nil
-	}
-
-	if m.Lso != nil {
-		if err := m.Lso.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("lso")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *Operators) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *Operators) UnmarshalBinary(b []byte) error {
-	var res Operators
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
