# restapi/operations/assisted_install_api.go
@@ -25,6 +25,7 @@ import (
 	"github.com/openshift/assisted-service/restapi/operations/installer"
 	"github.com/openshift/assisted-service/restapi/operations/managed_domains"
 	"github.com/openshift/assisted-service/restapi/operations/manifests"
+	"github.com/openshift/assisted-service/restapi/operations/operators"
 	"github.com/openshift/assisted-service/restapi/operations/versions"
 )
 
@@ -169,8 +170,14 @@ func NewAssistedInstallAPI(spec *loads.Document) *AssistedInstallAPI {
 		ManagedDomainsListManagedDomainsHandler: managed_domains.ListManagedDomainsHandlerFunc(func(params managed_domains.ListManagedDomainsParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation managed_domains.ListManagedDomains has not yet been implemented")
 		}),
+		OperatorsListOperatorPropertiesHandler: operators.ListOperatorPropertiesHandlerFunc(func(params operators.ListOperatorPropertiesParams, principal interface{}) middleware.Responder {
+			return middleware.NotImplemented("operation operators.ListOperatorProperties has not yet been implemented")
+		}),
 		VersionsListSupportedOpenshiftVersionsHandler: versions.ListSupportedOpenshiftVersionsHandlerFunc(func(params versions.ListSupportedOpenshiftVersionsParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation versions.ListSupportedOpenshiftVersions has not yet been implemented")
+		}),
+		OperatorsListSupportedOperatorsHandler: operators.ListSupportedOperatorsHandlerFunc(func(params operators.ListSupportedOperatorsParams, principal interface{}) middleware.Responder {
+			return middleware.NotImplemented("operation operators.ListSupportedOperators has not yet been implemented")
 		}),
 		InstallerPostStepReplyHandler: installer.PostStepReplyHandlerFunc(func(params installer.PostStepReplyParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.PostStepReply has not yet been implemented")
@@ -360,8 +367,12 @@ type AssistedInstallAPI struct {
 	InstallerListHostsHandler installer.ListHostsHandler
 	// ManagedDomainsListManagedDomainsHandler sets the operation handler for the list managed domains operation
 	ManagedDomainsListManagedDomainsHandler managed_domains.ListManagedDomainsHandler
+	// OperatorsListOperatorPropertiesHandler sets the operation handler for the list operator properties operation
+	OperatorsListOperatorPropertiesHandler operators.ListOperatorPropertiesHandler
 	// VersionsListSupportedOpenshiftVersionsHandler sets the operation handler for the list supported openshift versions operation
 	VersionsListSupportedOpenshiftVersionsHandler versions.ListSupportedOpenshiftVersionsHandler
+	// OperatorsListSupportedOperatorsHandler sets the operation handler for the list supported operators operation
+	OperatorsListSupportedOperatorsHandler operators.ListSupportedOperatorsHandler
 	// InstallerPostStepReplyHandler sets the operation handler for the post step reply operation
 	InstallerPostStepReplyHandler installer.PostStepReplyHandler
 	// InstallerRegisterAddHostsClusterHandler sets the operation handler for the register add hosts cluster operation
@@ -600,8 +611,14 @@ func (o *AssistedInstallAPI) Validate() error {
 	if o.ManagedDomainsListManagedDomainsHandler == nil {
 		unregistered = append(unregistered, "managed_domains.ListManagedDomainsHandler")
 	}
+	if o.OperatorsListOperatorPropertiesHandler == nil {
+		unregistered = append(unregistered, "operators.ListOperatorPropertiesHandler")
+	}
 	if o.VersionsListSupportedOpenshiftVersionsHandler == nil {
 		unregistered = append(unregistered, "versions.ListSupportedOpenshiftVersionsHandler")
+	}
+	if o.OperatorsListSupportedOperatorsHandler == nil {
+		unregistered = append(unregistered, "operators.ListSupportedOperatorsHandler")
 	}
 	if o.InstallerPostStepReplyHandler == nil {
 		unregistered = append(unregistered, "installer.PostStepReplyHandler")
@@ -915,7 +932,15 @@ func (o *AssistedInstallAPI) initHandlerCache() {
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
+	o.handlers["GET"]["/supported-operators/{operator_type}"] = operators.NewListOperatorProperties(o.context, o.OperatorsListOperatorPropertiesHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
 	o.handlers["GET"]["/openshift_versions"] = versions.NewListSupportedOpenshiftVersions(o.context, o.VersionsListSupportedOpenshiftVersionsHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/supported-operators"] = operators.NewListSupportedOperators(o.context, o.OperatorsListSupportedOperatorsHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
